--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   geolocator: ^13.0.1
   geocoding: ^3.0.0
   permission_handler: ^11.3.1
-  latlong2: ^0.9.1
   mime: ^1.0.6
   http_parser: 4.0.2
   shared_preferences: ^2.0.13
@@ -30,8 +29,13 @@ dependencies:
   provider: ^6.1.2
   flutter_image_compress: ^2.3.0
   device_info_plus: ^9.1.2
-  flutter_map: 7.0.2
   jwt_decoder: ^2.0.1
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  google_maps_flutter: ^2.1.1
+  webview_flutter: ^4.0.0
+  curved_navigation_bar: ^1.0.1
+ 
 
 dev_dependencies:
   flutter_lints: ^4.0.0
