--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   webview_flutter: ^4.0.0
   curved_navigation_bar: ^1.0.1
+  dio: ^5.1.0
  
 
 dev_dependencies:
